# MonitorNetworkConnectivity

./: .gitignore  README.md  ip.txt  requirements.txt  resource_rc.py  setup.cfg  setup.sh  start_app.sh  targets.txt  test.sh
NetworkConnectivty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
QTDesigns/: Change_parameters.py  Change_parameters.ui  MainMenu.ui  MainMenu2.ui  MainWindow.py  MainWindow.ui  PingWindow.py  PingWindow.ui  graph_window.py  graph_window.ui  ip_control_interface.py  ip_control_interface.ui  iperf_result.py  iperf_result.ui  iperf_window.py  iperf_window.ui  iperf_windowpy  pyuic5.sh  sshClient.py  sshClient.ui  sshClient_summaryi.py  sshClient_summaryi.ui  targetWindow.ui  ui_mainmenu.py  ui_targetWindow.py
QTDesigns/qt resource/: resource_rc.py
deb_dist/: monitorclean_0.1.0-1.debian.tar.xz  monitorclean_0.1.0-1.dsc  monitorclean_0.1.0-1_amd64.buildinfo  monitorclean_0.1.0-1_amd64.changes  monitorclean_0.1.0-1_source.buildinfo  monitorclean_0.1.0-1_source.changes  python3-monitorclean_0.1.0-1_all.deb
deb_dist/monitorclean-0.1.0/: README.md  setup.cfg
monitorclean.egg-info/: PKG-INFO
source/: -PingThread.py  GUI_graph.py  NetworkMonitorCLI.py  PingStats.py  PingStrategy.py  PingThread.py  PingThreadController.py  TEST.py  common_fuction.py  icmpLibController.py  iperf_Client_Wraper.py  iperf_TestResult_Wrapper.py  scapy_pings.py  subproces_for_iperf.py  targets.txt  temp  threads_for_iperf.py
test/: TEST.py  TEST_GUI.py  TEST_newGUI.py  mdiTest.py  test_icmpLib.py  test_icmplib.py  test_mouseEvent.py  widgetTest.py
(+38 files in other folders)
