[metadata]
name = monitorclean
version = 0.1.0
description = MonitorClean GUI
long_description = file: README.md
long_description_content_type = text/markdown
author = Gork
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyQt5
include_package_data = True

[options.entry_points]
console_scripts =
    monitorclean = test.TEST_newGUI:main
